--- a/events/faculty/Dance-Group.html
+++ b/events/faculty/Dance-Group.html
@@ -72,7 +72,7 @@
             background-clip: text;
             -webkit-background-clip: text;
             color: transparent;
-            background-image: linear-gradient(45deg, #f4e7e1, #ffb6c1, rgba(160, 179, 145, 1));
+            background-image: linear-gradient(45deg, #f6cebb, #fa506a, rgb(119, 144, 100));
         }
         .content-container p:hover {
             background: linear-gradient(45deg, rgba(160, 179, 145, 1), #ffb6c1);
@@ -102,7 +102,7 @@
             <p>Venue: <span class="event-venue"></span></p>
             <p>Date: <span class="event-date"></span></p>
             <p>Contact: <span class="event-contact"></span></p>
-            <button class="google-form-button" onclick="openGoogleForm()">Google Form</button>
+            <button class="google-form-button" onclick="openGoogleForm()">Register</button>
         </div>
     </div>
     <script>
