--- a/events/students/App Development.html
+++ b/events/students/App Development.html
@@ -72,7 +72,7 @@
             background-clip: text;
             -webkit-background-clip: text;
             color: transparent;
-            background-image: linear-gradient(45deg, #f4e7e1, #ffb6c1, rgba(160, 179, 145, 1));
+            background-image: linear-gradient(45deg, #f6cebb, #fa506a, rgb(119, 144, 100));
         }
         .content-container p:hover {
             background: linear-gradient(45deg, rgba(160, 179, 145, 1), #ffb6c1);
@@ -93,7 +93,7 @@
 <body>
     <div class="top-section">
         <img src="../../images/back-arrow.png" alt="Back" class="back-arrow" onclick="goBack()">
-        <div class="title">Women's Day Celebration 2024</div>
+        <div class="title">Women's Day Celebration 2025</div>
     </div>
     <div class="bottom-section">
         <div class="content-container">
