--- a/events/students/App Development.html
+++ b/events/students/App Development.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title class="title-class">Women's Day Celebration 2024</title>
+    <title class="title-class">Women's Day Celebration 2025</title>
     <link rel="shortcut icon" href="../../images/profile.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
     <style>
@@ -18,7 +18,7 @@
             justify-content: space-between;
             padding: 20px;
             background-color: rgba(255, 255, 255, 0.8);
-            border: solid 1px rgba(160, 179, 145, 1);
+            border: solid 1px pink;
         }
         .back-arrow {
             cursor: pointer;
@@ -26,15 +26,17 @@
         }
         .title {
             color: #f75fc7;
-            font-weight: 500;
+            font-weight: 750;
+            line-height:1;
             font-size: 30px;
             text-align: center;
-            background-clip: text;
+            font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background-clip:text;
             -webkit-background-clip: text;
-            color: transparent;
-            background-image: linear-gradient(45deg, rgb(249, 205, 212), pink, rgb(246, 160, 174), rgb(252, 151, 168));
+            color:transparent;
+            background-image:linear-gradient(45deg,rgb(249, 205, 212),pink,rgb(246, 160, 174),rgb(252, 151, 168));
             background-size: 400% 400%;
-            animation: animate 15s ease infinite;
+            animation :animate 15s ease infinite;
         }
         @keyframes animate {
             0% { background-position: 0 0; }
@@ -45,7 +47,7 @@
         }
         .bottom-section {
             position: relative;
-            background: url("../../images/backgraound-2.svg");
+            background: url("../../images/background-2.svg");
             background-size: cover;
             background-position: center;
             height: calc(100vh - 100px);
@@ -65,29 +67,48 @@
         }
         .content-container p {
             font-size: 20px;
-            border: 1px solid rgba(160, 179, 145, 1);
+            border: 1px solid rgb(128, 150, 112);
             text-align: center;
             border-radius: 5px;
             padding: 10px;
             background-clip: text;
             -webkit-background-clip: text;
             color: transparent;
-            background-image: linear-gradient(45deg, #f6cebb, #fa506a, rgb(119, 144, 100));
+            background-image: linear-gradient(45deg,rgb(4, 128, 244),rgb(228, 96, 189),rgb(248, 106, 127));
         }
         .content-container p:hover {
-            background: linear-gradient(45deg, rgba(160, 179, 145, 1), #ffb6c1);
+            background: linear-gradient(45deg,rgb(13, 133, 246),rgb(237, 124, 203),lightpink);
             color: white;
             box-shadow: 0 0 10px #f4e7e1;
         }
         .google-form-button {
             margin-top: 20px;
             padding: 10px 20px;
-            background-color: rgba(160, 179, 145, 1);
+            background-image:linear-gradient(45deg,rgb(13, 133, 246),rgb(237, 124, 203),lightpink);
             color: white;
             border: none;
             cursor: pointer;
             font-size: 1em;
+            background-size: 400% 400%;
+            animation :animate 15s ease infinite;
         }
+        @keyframes animate{
+        0%{
+            background-position:0 0 ;
+        }
+        25%{
+            background-position:100% 0 ;  
+        }
+        50%{
+            background-position:100% 100% ;
+        }
+        75%{
+            background-position:0 100% ;
+        }
+        100%{
+            background-position:0 0 ;
+        } 
+    }
     </style>
 </head>
 <body>
@@ -102,7 +123,7 @@
             <p>Venue: <span class="event-venue"></span></p>
             <p>Date: <span class="event-date"></span></p>
             <p>Contact: <span class="event-contact"></span></p>
-            <button class="google-form-button" onclick="openGoogleForm()">Google Form</button>
+            <button class="google-form-button" onclick="openGoogleForm()">Register</button>
         </div>
     </div>
     <script>
