--- a/pdf/pdf.html
+++ b/pdf/pdf.html
@@ -47,15 +47,15 @@
     <div class="pdf-container">
         <div class="pdf-box">
             <img src="../images/pdf.png" alt="PDF 1">
-            <div class="pdf-link"><a href="pdf1.pdf" target="_blank">Womens Day Faculty Event Circular</a></div>
+            <div class="pdf-link"><a href="WomensDay25Faculty.pdf" target="_blank">Womens Day Faculty Event Circular</a></div>
         </div>
         <div class="pdf-box">
             <img src="../images/pdf.png" alt="PDF 2">
-            <div class="pdf-link"><a href="pdf2.pdf" target="_blank">Womens Day - Commitees</a></div>
+            <div class="pdf-link"><a href="WomensDay25Faculty.pdf" target="_blank">Womens Day - Commitees</a></div>
         </div>
         <div class="pdf-box">
             <img src="../images/pdf.png" alt="PDF 3">
-            <div class="pdf-link"><a href="pdf3.pdf" target="_blank">Womens Day Students Event Circular</a></div>
+            <div class="pdf-link"><a href="WomensDay25Student.pdf" target="_blank">Womens Day Students Event Circular</a></div>
         </div>
     </div>
 </body>
