--- a/pdf/pdf.html
+++ b/pdf/pdf.html
@@ -51,7 +51,7 @@
         </div>
         <div class="pdf-box">
             <img src="../images/pdf.png" alt="PDF 2">
-            <div class="pdf-link"><a href="WomensDay25Faculty.pdf" target="_blank">Womens Day - Commitees</a></div>
+            <div class="pdf-link"><a href="Womens day -Committees.pdf" target="_blank">Womens Day - Commitees Circular</a></div>
         </div>
         <div class="pdf-box">
             <img src="../images/pdf.png" alt="PDF 3">
