Update Women's Day 2k25.html

--- a/Women's Day 2k25.html
+++ b/Women's Day 2k25.html
@@ -17,7 +17,14 @@
         <div class="title">
             <h1>Women's Day Celebration 2025</h1>
         </div>
-        <a href="pdf/pdf.html"><img src="images/hamburger.png" alt="PDF Files" class="pdf-icon"></a>
+        <div class="dropdown-container">
+            <img src="images/hamburger.png" alt="">
+            <select onchange="openPDF(this.value);">
+                <option value="pdf/WomensDay25Student.pdf">Student Circular</option>
+                <option value="pdf/WomensDay25Faculty.pdf">Faculty Circular</option>
+                <option value="pdf/Womens day -Committees.pdf">Faculty Committees</option>
+            </select>
+        </div>
     </div>
     <div class="container">
         <div class="events-container">
