Update Women's Day 2k25.html

--- a/Women's Day 2k25.html
+++ b/Women's Day 2k25.html
@@ -32,6 +32,12 @@
                     <!-- Student events will be added here -->
                 </ul>
             </div>
+            <div class="event-box">
+                <h2>Faculty Sports</h2>
+                <ul id="faculty-events">
+                    <!-- Student events will be added here -->
+                </ul>
+            </div>
         </div>
     </div>
     <script src="Women's Day 2k25.js"></script>
