Update Women's Day 2k25.html

--- a/Women's Day 2k25.html
+++ b/Women's Day 2k25.html
@@ -33,7 +33,7 @@
                 </ul>
             </div>
             <div class="event-box">
-                <h2>Faculty Sports</h2>
+                <h2>Faculty Sports Event</h2>
                 <ul id="faculty-events">
                     <!-- Student events will be added here -->
                 </ul>
