Update Women's Day 2k25.html

--- a/Women's Day 2k25.html
+++ b/Women's Day 2k25.html
@@ -34,7 +34,7 @@
             </div>
             <div class="event-box">
                 <h2>Faculty Sports Event</h2>
-                <ul id="faculty-events">
+                <ul id="faculty-sports">
                     <!-- Student events will be added here -->
                 </ul>
             </div>
