--- a/Women's Day 2k25.html
+++ b/Women's Day 2k25.html
@@ -17,6 +17,14 @@
         <div class="title">
             <h1>Women's Day Celebration 2025</h1>
         </div>
+        <div class="dropdown-container">
+            <img src="images/hamburger.png" alt="">
+            <select onchange="openPDF(this.value)">
+                <option value="pdf/Womens day -Committees.pdf">Faculty Committee Circular</option>
+                <option value="pdfs/WomensDay25Faculty.pdf">Faculty Events Circular</option>
+                <option value="pdfs/WomensDay25Student.pdf">Students Events Circular</option>
+            </select>
+        </div>
     </div>
     <div class="container">
         <div class="events-container">
