Update Women's Day 2k25.html

--- a/Women's Day 2k25.html
+++ b/Women's Day 2k25.html
@@ -21,8 +21,8 @@
             <img src="images/hamburger.png" alt="">
             <select onchange="openPDF(this.value)">
                 <option value="pdf/Womens day -Committees.pdf">Faculty Committee Circular</option>
-                <option value="pdfs/WomensDay25Faculty.pdf">Faculty Events Circular</option>
-                <option value="pdfs/WomensDay25Student.pdf">Students Events Circular</option>
+                <option value="pdf/WomensDay25Faculty.pdf">Faculty Events Circular</option>
+                <option value="pdf/WomensDay25Student.pdf">Students Events Circular</option>
             </select>
         </div>
     </div>
